--- a/Assets/UI Toolkit/MainViewUXML.uxml
+++ b/Assets/UI Toolkit/MainViewUXML.uxml
@@ -1,11 +1,11 @@
-﻿<ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
-    <Style src="project://database/Assets/UI%20Toolkit/Styles/MainStyles.uss?fileID=7433441132597879392&amp;guid=44d5ab9c4f04d9449a67e3b7519a7b73&amp;type=3#MainStyles" />
+<ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
+    <Style src="project://database/Assets/UI%20Toolkit/Styles/MainStyles.uss?fileID=7433441132597879392&amp;guid=c26ea74634aa43e44ae802e2bf7b21c6&amp;type=3#MainStyles" />
     <ui:VisualElement name="container" style="flex-grow: 1; background-color: rgb(0, 0, 0);">
         <ui:MultiColumnListView name="output" virtualization-method="FixedHeight" show-bound-collection-size="false" focusable="false" horizontal-scrolling="true" selection-type="None" show-foldout-header="false" show-add-remove-footer="false" fixed-item-height="50" allow-add="false" allow-remove="false" style="flex-grow: 10; flex-basis: auto; background-color: rgb(0, 0, 0); height: 45%; top: auto; flex-wrap: wrap; font-size: 30px; -unity-text-align: lower-left;">
-            <ui:Columns resize-preview="false" reorderable="false" stretch-mode="Grow">
+            <ui:Columns resize-preview="false" reorderable="false" stretch-mode="Grow" resizable="false">
                 <ui:Column name="Column0" width="10%" sortable="false" stretchable="true" resizable="true" optional="false" />
                 <ui:Column name="Column1" width="15%" sortable="false" stretchable="true" resizable="true" optional="false" />
-                <ui:Column name="Column2" width="80%" sortable="false" stretchable="true" resizable="true" optional="false" />
+                <ui:Column name="Column2" width="75%" sortable="false" stretchable="true" resizable="true" optional="false" />
             </ui:Columns>
         </ui:MultiColumnListView>
         <ui:Label text="Input" name="input" class="label" style="-unity-text-align: upper-right; flex-grow: 0; height: 5%; font-size: 40px; color: rgb(252, 255, 0); background-color: rgb(51, 51, 51);" />
@@ -23,7 +23,7 @@
                 <ui:Button text="⌫" name="button-back-drop" class="button" />
             </ui:VisualElement>
             <ui:VisualElement name="row-2" style="flex-grow: 1; flex-direction: row; justify-content: center;">
-                <ui:Button name="button-format-mixed" text="Mixed" class="button mode-button" />
+                <ui:Button name="button-format-partition" text="Partition" class="button mode-button" />
                 <ui:Button name="button-format-rotbin" text="Rot Bin" class="button mode-button" />
                 <ui:Button name="button-format-rotbalbin" text="Rot BalBin" class="button mode-button" />
                 <ui:Button class="button" />
