Refactor Change.cs and update related files
Refactored `Change.cs` by replacing `ChangeType` enum with an abstract `Change` class and introducing new properties and methods. Updated `Assembly-CSharp.csproj` to include `Change.Helpers.cs` which contains new classes for handling different types of changes. `OperationController.cs` was modified to reflect these changes, including renaming `input` to `inputBuf` and adding methods for undo and redo operations. UI and styles were updated in `MainViewUXML.uxml` and `MainStyles.uss` respectively, including new buttons for undo/redo and a new style for disabled buttons.

--- a/Assets/UI Toolkit/MainViewUXML.uxml
+++ b/Assets/UI Toolkit/MainViewUXML.uxml
@@ -32,7 +32,7 @@
                 <ui:Button text="4" name="button-4" class="button" />
                 <ui:Button text="5" name="button-5" class="button" />
                 <ui:Button text="6" name="button-6" class="button" />
-                <ui:Button text="Swap" name="button-swap" class="button" />
+                <ui:Button text="Swap" name="button-swap" enabled="false" class="button" />
             </ui:VisualElement>
             <ui:VisualElement name="row-3" style="flex-grow: 1; flex-direction: row; justify-content: center;">
                 <ui:Button class="button" />
@@ -49,8 +49,8 @@
             <ui:VisualElement name="row-4" style="flex-grow: 1; flex-direction: row; justify-content: center;">
                 <ui:Button name="button-clear" text="Clear" class="button" />
                 <ui:Button class="button" />
-                <ui:Button class="button" />
-                <ui:Button class="button" />
+                <ui:Button name="button-undo" text="Undo" class="button" />
+                <ui:Button text="Redo" name="button-redo" class="button" />
                 <ui:Button name="button-mod" text="Mod" class="button" />
                 <ui:Button text="+" name="button-sum" class="button" />
                 <ui:Button text="." name="button-point" class="button" />
