--- a/Assets/UI Toolkit/MainViewUXML.uxml
+++ b/Assets/UI Toolkit/MainViewUXML.uxml
@@ -3,9 +3,9 @@
     <ui:VisualElement name="container" style="flex-grow: 1; background-color: rgb(0, 0, 0);">
         <ui:MultiColumnListView name="output" virtualization-method="FixedHeight" show-bound-collection-size="false" focusable="false" horizontal-scrolling="true" selection-type="None" show-foldout-header="false" show-add-remove-footer="false" fixed-item-height="50" allow-add="false" allow-remove="false" style="flex-grow: 10; flex-basis: auto; background-color: rgb(0, 0, 0); height: 45%; top: auto; font-size: 30px; -unity-text-align: lower-left;">
             <ui:Columns resize-preview="false" reorderable="false" stretch-mode="Grow" resizable="false">
-                <ui:Column name="Column0" width="10%" sortable="false" stretchable="true" resizable="true" optional="false" />
-                <ui:Column name="Column1" width="15%" sortable="false" stretchable="true" resizable="true" optional="false" />
-                <ui:Column name="Column2" width="75%" sortable="false" stretchable="true" resizable="true" optional="false" />
+                <ui:Column name="Column0" width="10%" sortable="false" stretchable="true" resizable="true" optional="false" title="Title 0" />
+                <ui:Column name="Column1" width="15%" sortable="false" stretchable="true" resizable="true" optional="false" title="Title 1" />
+                <ui:Column name="Column2" width="75%" sortable="false" stretchable="true" resizable="true" optional="false" title="Title 2" />
             </ui:Columns>
         </ui:MultiColumnListView>
         <ui:Label text="Input" name="input" class="label" style="-unity-text-align: upper-left; flex-grow: 0; height: 5%; font-size: 40px; color: rgb(252, 255, 0); background-color: rgb(51, 51, 51);" />
