--- a/Assets/UI Toolkit/Styles/MainStyles.uss
+++ b/Assets/UI Toolkit/Styles/MainStyles.uss
@@ -1,12 +1,12 @@
 Label {
     -unity-font-definition: resource('Fonts & Materials/CascadiaCodeNF SDF');
     font-size: 40px;
-    color: rgb(255, 214, 0);
     white-space: nowrap;
     width: auto;
     flex-direction: row;
     flex-shrink: 0;
     flex-grow: 1;
+    color: rgb(255, 255, 0);
 }
 
 .unity-multi-column-header__column__default-content {
@@ -76,4 +76,12 @@ Label {
 .button.mode-button.selected {
     color: rgb(0, 255, 0);
     -unity-font-style: bold;
+}
+
+.unity-list-view__item {
+    background-color: transparent;
+}
+
+.unity-list-view__item:hover {
+    background-color: transparent;
 }
