Enhance UI: Replace generic buttons with Rep shift buttons
The code changes in the `MainViewUXML.uxml` file involve modifications to the button elements within a `VisualElement` named `row-3`. Specifically, two unnamed button elements have been removed. Two new buttons have been added: a button with the name `button-rep-shift-left` and the text `<< Rep`, and a button with the name `button-rep-shift-right` and the text `Rep >>`.

These changes enhance the user interface by replacing two generic buttons with more descriptive and functional buttons related to "Rep" shifting operations.

--- a/Assets/UI Toolkit/MainViewUXML.uxml
+++ b/Assets/UI Toolkit/MainViewUXML.uxml
@@ -36,8 +36,8 @@
             </ui:VisualElement>
             <ui:VisualElement name="row-3" style="flex-grow: 1; flex-direction: row; justify-content: center;">
                 <ui:Button class="button" />
-                <ui:Button class="button" />
-                <ui:Button class="button" />
+                <ui:Button name="button-rep-shift-left" text="&lt;&lt; Rep" class="button" />
+                <ui:Button name="button-rep-shift-right" text="Rep &gt;&gt;" class="button" />
                 <ui:Button name="button-as-repetend" text="→ Rep" class="button" />
                 <ui:Button name="button-div-ones" text="x/111" class="button" />
                 <ui:Button text="-" name="button-diff" class="button" />
