--- a/Assets/UI Toolkit/MainViewUXML.uxml
+++ b/Assets/UI Toolkit/MainViewUXML.uxml
@@ -13,8 +13,8 @@
             <ui:VisualElement name="row-1" style="flex-grow: 1; flex-direction: row; justify-content: center;">
                 <ui:Button name="button-format-normal" text="Normal" class="button mode-button" />
                 <ui:Button name="button-format-bin" text="Bin" class="button mode-button" />
-                <ui:Button name="button-format-repetend" text="Repetend&#10;" class="button mode-button" />
-                <ui:Button class="button" />
+                <ui:Button name="button-format-repetend" text="Repetend" class="button mode-button" />
+                <ui:Button name="button-format-period" text="Period" class="button mode-button" />
                 <ui:Button name="button-square" text="x²" class="button" />
                 <ui:Button text="÷" name="button-quotient" class="button" />
                 <ui:Button text="7" name="button-7" class="button" />
@@ -35,7 +35,7 @@
                 <ui:Button text="Copy 2" name="button-copy-2" enabled="true" class="button" />
             </ui:VisualElement>
             <ui:VisualElement name="row-3" style="flex-grow: 1; flex-direction: row; justify-content: center;">
-                <ui:Button class="button" />
+                <ui:Button text="RepF" name="button-rep-factor" class="button" />
                 <ui:Button name="button-rep-shift-left" text="&lt;&lt; Rep" class="button" />
                 <ui:Button name="button-rep-shift-right" text="Rep &gt;&gt;" class="button" />
                 <ui:Button name="button-as-repetend" text="→ Rep" class="button" />
