--- a/Assets/UI Toolkit/MainViewUXML.uxml
+++ b/Assets/UI Toolkit/MainViewUXML.uxml
@@ -71,5 +71,5 @@
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
-    <NumberDialog name="number-dialog" enabled="true" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; margin-top: 0; display: none;" />
+    <NumberDialog name="number-dialog" style="visibility: visible; display: none;" />
 </ui:UXML>
