--- a/Assets/UI Toolkit/MainViewUXML.uxml
+++ b/Assets/UI Toolkit/MainViewUXML.uxml
@@ -12,20 +12,20 @@
         <ui:VisualElement name="button-grid" style="flex-grow: 8; flex-direction: column; flex-wrap: nowrap; justify-content: center; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; flex-shrink: 1; position: relative; bottom: auto; top: auto; left: auto; right: auto; align-self: auto; flex-basis: auto; height: 60%; max-height: none; min-height: auto;">
             <ui:VisualElement name="row-0" style="flex-grow: 1; flex-direction: row; justify-content: center;">
                 <ui:Button name="button-format-normal" text="Normal" class="button mode-button" />
-                <ui:Button name="button-format-bin" text="Bin" class="button mode-button" />
-                <ui:Button name="button-format-repetend" text="Repetend" class="button mode-button" />
-                <ui:Button name="button-format-period" text="Period" class="button mode-button" />
+                <ui:Button name="button-format-periodic" text="Periodic" class="button mode-button" />
+                <ui:Button name="button-format-padic" text="P-Adic" class="button mode-button" />
+                <ui:Button class="button" />
                 <ui:Button name="button-pow" text="xʸ" class="button" />
-                <ui:Button class="button" />
-                <ui:Button class="button" />
-                <ui:Button class="button" />
-                <ui:Button class="button" />
+                <ui:Button name="button-base-2" text="Base 2" class="button base-button" />
+                <ui:Button name="button-base-3" text="Base 3" class="button base-button" />
+                <ui:Button name="button-base-5" text="Base 5" class="button base-button" />
+                <ui:Button name="button-base-10" text="Dec" class="button base-button" />
                 <ui:Button class="button" />
             </ui:VisualElement>
             <ui:VisualElement name="row-1" style="flex-grow: 1; flex-direction: row; justify-content: center;">
-                <ui:Button name="button-format-partition" text="Partition" class="button mode-button" />
-                <ui:Button name="button-format-rotbin" text="Rot Bin" class="button mode-button" />
-                <ui:Button name="button-format-factor" text="Factor" class="button mode-button" />
+                <ui:Button class="button" />
+                <ui:Button name="button-format-rot" text="Rot" class="button mode-button" />
+                <ui:Button class="button" />
                 <ui:Button class="button" />
                 <ui:Button name="button-square" text="x²" class="button" />
                 <ui:Button text="÷" name="button-quotient" class="button" />
@@ -35,10 +35,10 @@
                 <ui:Button text="←" name="button-back-drop" class="button" />
             </ui:VisualElement>
             <ui:VisualElement name="row-2" style="flex-grow: 1; flex-direction: row; justify-content: center;">
-                <ui:Button class="button" />
-                <ui:Button class="button" />
-                <ui:Button class="button" />
-                <ui:Button name="button-pow" class="button" />
+                <ui:Button name="button-format-factor" text="Factor" class="button mode-button" />
+                <ui:Button name="button-format-repetend" text="Repetend" class="button mode-button" />
+                <ui:Button name="button-format-period" text="Period" class="button mode-button" />
+                <ui:Button name="button-format-partition" text="Partition" class="button mode-button" />
                 <ui:Button name="button-reciprocal" text="1/x" class="button" />
                 <ui:Button text="x" name="button-prod" class="button" />
                 <ui:Button text="4" name="button-4" class="button" />
@@ -60,7 +60,7 @@
             </ui:VisualElement>
             <ui:VisualElement name="row-4" style="flex-grow: 1; flex-direction: row; justify-content: center;">
                 <ui:Button name="button-clear" text="Clear" class="button" />
-                <ui:Button text="AsBal" name="button-as-bal" class="button" />
+                <ui:Button class="button" />
                 <ui:Button name="button-undo" text="Undo" class="button" />
                 <ui:Button text="Redo" name="button-redo" class="button" />
                 <ui:Button name="button-mod" text="Mod" class="button" />
