--- a/Assets/UI Toolkit/MainViewUXML.uxml
+++ b/Assets/UI Toolkit/MainViewUXML.uxml
@@ -71,5 +71,5 @@
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
-    <NumberDialog name="number-dialog" style="visibility: visible; display: none;" />
+    <NumberDialog name="number-dialog" style="position: absolute; right: 0; left: 0; bottom: 0; top: 0; display: none;" />
 </ui:UXML>
