--- a/Assets/UI Toolkit/MainViewUXML.uxml
+++ b/Assets/UI Toolkit/MainViewUXML.uxml
@@ -11,9 +11,9 @@
         <ui:Label text="Input" name="input" class="label" style="-unity-text-align: upper-left; flex-grow: 0; height: 5%; font-size: 40px; color: rgb(252, 255, 0); background-color: rgb(51, 51, 51);" />
         <ui:VisualElement name="button-grid" style="flex-grow: 8; flex-direction: column; flex-wrap: nowrap; justify-content: center; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; flex-shrink: 1; position: relative; bottom: auto; top: auto; left: auto; right: auto; align-self: auto; flex-basis: auto; height: 60%; max-height: none; min-height: auto;">
             <ui:VisualElement name="row-0" style="flex-grow: 1; flex-direction: row; justify-content: center;">
-                <ui:Button name="button-format-normal" text="Normal" class="button mode-button" />
-                <ui:Button name="button-format-periodic" text="Periodic" class="button mode-button" />
-                <ui:Button name="button-format-padic" text="P-Adic" class="button mode-button" />
+                <ui:Button name="button-mode-normal" text="Normal" class="button mode-button" />
+                <ui:Button name="button-mode-periodic" text="Periodic" class="button mode-button" />
+                <ui:Button name="button-mode-padic" text="P-Adic" class="button mode-button" />
                 <ui:Button class="button" />
                 <ui:Button name="button-pow" text="xʸ" class="button" />
                 <ui:Button name="button-base-2" text="Base 2" class="button base-button" />
@@ -24,7 +24,7 @@
             </ui:VisualElement>
             <ui:VisualElement name="row-1" style="flex-grow: 1; flex-direction: row; justify-content: center;">
                 <ui:Button class="button" />
-                <ui:Button name="button-format-rot" text="Rot" class="button mode-button" />
+                <ui:Button name="button-mode-rot" text="Rot" class="button mode-button" />
                 <ui:Button class="button" />
                 <ui:Button class="button" />
                 <ui:Button name="button-square" text="x²" class="button" />
@@ -35,10 +35,10 @@
                 <ui:Button text="←" name="button-back-drop" class="button" />
             </ui:VisualElement>
             <ui:VisualElement name="row-2" style="flex-grow: 1; flex-direction: row; justify-content: center;">
-                <ui:Button name="button-format-factor" text="Factor" class="button mode-button" />
-                <ui:Button name="button-format-repetend" text="Repetend" class="button mode-button" />
-                <ui:Button name="button-format-period" text="Period" class="button mode-button" />
-                <ui:Button name="button-format-partition" text="Partition" class="button mode-button" />
+                <ui:Button name="button-mode-factor" text="Factor" class="button mode-button" />
+                <ui:Button name="button-mode-repetend" text="Repetend" class="button mode-button" />
+                <ui:Button name="button-mode-period" text="Period" class="button mode-button" />
+                <ui:Button name="button-mode-partition" text="Partition" class="button mode-button" />
                 <ui:Button name="button-reciprocal" text="1/x" class="button" />
                 <ui:Button text="x" name="button-prod" class="button" />
                 <ui:Button text="4" name="button-4" class="button" />
