--- a/Assets/UI Toolkit/MainViewUXML.uxml
+++ b/Assets/UI Toolkit/MainViewUXML.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <Style src="project://database/Assets/UI%20Toolkit/Styles/MainStyles.uss?fileID=7433441132597879392&amp;guid=c26ea74634aa43e44ae802e2bf7b21c6&amp;type=3#MainStyles" />
     <ui:VisualElement name="container" style="flex-grow: 1; background-color: rgb(0, 0, 0);">
-        <ui:MultiColumnListView name="output" virtualization-method="FixedHeight" show-bound-collection-size="false" focusable="false" horizontal-scrolling="true" selection-type="Single" show-foldout-header="false" show-add-remove-footer="false" fixed-item-height="50" allow-add="false" allow-remove="false" show-border="false" style="flex-grow: 10; flex-basis: auto; background-color: rgb(0, 0, 0); height: 35%; top: auto; font-size: 30px; -unity-text-align: lower-left;">
+        <ui:MultiColumnListView name="output" virtualization-method="FixedHeight" show-bound-collection-size="false" focusable="false" horizontal-scrolling="true" selection-type="Single" show-foldout-header="false" show-add-remove-footer="false" fixed-item-height="50" allow-add="false" allow-remove="false" show-border="false" style="flex-grow: 10; flex-basis: auto; background-color: rgb(0, 0, 0); height: 30%; top: auto; font-size: 30px; -unity-text-align: lower-left;">
             <ui:Columns resize-preview="false" reorderable="false" stretch-mode="Grow" resizable="false">
                 <ui:Column name="Column0" width="15%" sortable="false" stretchable="true" resizable="true" optional="false" title="Title0" />
                 <ui:Column name="Column1" width="10%" sortable="false" stretchable="true" resizable="true" optional="false" title="Title1" />
@@ -9,20 +9,32 @@
             </ui:Columns>
         </ui:MultiColumnListView>
         <ui:Label text="Input" name="input" class="label" style="-unity-text-align: upper-left; flex-grow: 0; height: 5%; font-size: 40px; color: rgb(252, 255, 0); background-color: rgb(51, 51, 51);" />
-        <ui:VisualElement name="button-grid" style="flex-grow: 8; flex-direction: column; flex-wrap: nowrap; justify-content: center; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; flex-shrink: 1; position: relative; bottom: auto; top: auto; left: auto; right: auto; align-self: auto; flex-basis: auto; height: 60%; max-height: none; min-height: auto;">
+        <ui:VisualElement name="button-grid" style="flex-grow: 8; flex-direction: column; flex-wrap: nowrap; justify-content: center; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; flex-shrink: 1; position: relative; bottom: auto; top: auto; left: auto; right: auto; align-self: auto; flex-basis: auto; height: 65%; max-height: none; min-height: auto;">
             <ui:VisualElement name="row-0" style="flex-grow: 1; flex-direction: row; justify-content: center;">
+                <ui:Button class="button" />
+                <ui:Button class="button" />
+                <ui:Button class="button" />
+                <ui:Button class="button" />
+                <ui:Button class="button" />
+                <ui:Button name="button-out-base-2" text="Base 2" class="button base-button" />
+                <ui:Button name="button-out-base-3" text="Base 3" class="button base-button" />
+                <ui:Button name="button-out-base-5" text="Base 5" class="button base-button" />
+                <ui:Button name="button-out-base-7" text="Base 7" class="button base-button" />
+                <ui:Button name="button-out-base-10" text="Dec" class="button base-button" />
+            </ui:VisualElement>
+            <ui:VisualElement name="row-1" style="flex-grow: 1; flex-direction: row; justify-content: center;">
                 <ui:Button name="button-mode-normal" text="Normal" class="button mode-button" />
                 <ui:Button name="button-mode-periodic" text="Periodic" class="button mode-button" />
                 <ui:Button name="button-mode-padic" text="P-Adic" class="button mode-button" />
                 <ui:Button class="button" />
                 <ui:Button name="button-pow" text="xʸ" class="button" />
-                <ui:Button name="button-base-2" text="Base 2" class="button base-button" />
-                <ui:Button name="button-base-3" text="Base 3" class="button base-button" />
-                <ui:Button name="button-base-5" text="Base 5" class="button base-button" />
-                <ui:Button name="button-base-10" text="Dec" class="button base-button" />
-                <ui:Button name="button-toggle-input" text="Decimal&#10;Input" class="button toggle-button" />
+                <ui:Button name="button-in-base-2" text="Base 2" class="button base-button" />
+                <ui:Button name="button-in-base-3" text="Base 3" class="button base-button" />
+                <ui:Button name="button-in-base-5" text="Base 5" class="button base-button" />
+                <ui:Button name="button-in-base-7" text="Base 5" class="button base-button" />
+                <ui:Button name="button-in-base-10" text="Dec" class="button base-button" />
             </ui:VisualElement>
-            <ui:VisualElement name="row-1" style="flex-grow: 1; flex-direction: row; justify-content: center;">
+            <ui:VisualElement name="row-2" style="flex-grow: 1; flex-direction: row; justify-content: center;">
                 <ui:Button class="button" />
                 <ui:Button name="button-mode-rot" text="Rot" class="button mode-button" />
                 <ui:Button class="button" />
@@ -34,7 +46,7 @@
                 <ui:Button text="9" name="button-9" class="button" />
                 <ui:Button text="←" name="button-back-drop" class="button" />
             </ui:VisualElement>
-            <ui:VisualElement name="row-2" style="flex-grow: 1; flex-direction: row; justify-content: center;">
+            <ui:VisualElement name="row-3" style="flex-grow: 1; flex-direction: row; justify-content: center;">
                 <ui:Button name="button-mode-factor" text="Factor" class="button mode-button" />
                 <ui:Button name="button-mode-repetend" text="Repetend" class="button mode-button" />
                 <ui:Button name="button-mode-period" text="Period" class="button mode-button" />
@@ -46,7 +58,7 @@
                 <ui:Button text="6" name="button-6" class="button" />
                 <ui:Button text="Copy 2" name="button-copy-2" enabled="true" class="button" />
             </ui:VisualElement>
-            <ui:VisualElement name="row-3" style="flex-grow: 1; flex-direction: row; justify-content: center;">
+            <ui:VisualElement name="row-4" style="flex-grow: 1; flex-direction: row; justify-content: center;">
                 <ui:Button text="RepF" name="button-rep-factor" class="button" />
                 <ui:Button name="button-rep-shift-left" text="&lt;&lt; Rep" class="button" />
                 <ui:Button name="button-rep-shift-right" text="Rep &gt;&gt;" class="button" />
@@ -58,7 +70,7 @@
                 <ui:Button text="3" name="button-3" class="button" />
                 <ui:Button text="±" name="button-neg" class="button" />
             </ui:VisualElement>
-            <ui:VisualElement name="row-4" style="flex-grow: 1; flex-direction: row; justify-content: center;">
+            <ui:VisualElement name="row-5" style="flex-grow: 1; flex-direction: row; justify-content: center;">
                 <ui:Button name="button-clear" text="Clear" class="button" />
                 <ui:Button class="button" />
                 <ui:Button name="button-undo" text="Undo" class="button" />
